iptables.firewall.rules
*filter

#  Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Accept tcp,udp,icmp and ip from cn
-A INPUT -p tcp -m set --match-set cn src -j ACCEPT
-A INPUT -p udp -m set --match-set cn src -j ACCEPT
-A INPUT -p icmp -m set --match-set cn src -j ACCEPT

#  Log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# set rest of ip default policy
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -j ACCEPT

COMMIT
